# tsk-email-service

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  pyproject.toml
email_api/: models.py  tasks.py  views.py
src/: celery.py  config.py  settings.py  urls.py
templates/: default_email_template.html
