[project]
name = "src"
version = "0.1.0"
description = ""
authors = [{name = "Codeminister2137", email = "<kubajaworski99@wp.pl>"}]

requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.1.5)",
    "djangorestframework (>=3.16.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
